Some Bug Squash

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,6 @@ body {
   padding: 0;
   font-family: "Roboto", sans-serif !important;
 }
-
 .logo {
   text-decoration: none !important;
   text-transform: capitalize;
@@ -12,53 +11,44 @@ body {
   display: inline-block; /* Ensures proper styling */
   transition: none !important; /* Prevents unnecessary animations */
 }
-
 .logo h1 {
   margin: 0; /* Ensures no extra spacing */
 }
-
 .top_logo {
   background-color: #ffb433 !important;
   font-size: 24px;
   font-weight: bold;
   border-bottom: 5px solid #b4ebe6;
 }
-
 .container p {
   margin-bottom: 0rem !important;
 }
-
 .footer {
   background-color: #ffb433;
   border-top: 5px solid #b4ebe6;
 }
-
 .footer span {
   text-align: center;
   display: block;
   padding-top: 10px;
   padding-bottom: 10px;
 }
-
 .login_box {
   background-color: #80cbc4;
   border-radius: 6px;
   padding: 10px;
 }
-
 .login_bg {
   background-color: #b4ebe6;
   height: 100vh;
   width: 100%;
 }
-
 .admin_text {
   font-size: 15px;
   background-color: #000;
   color: #fff !important;
   padding: 2px;
 }
-
 .description::first-letter {
   text-transform: uppercase;
   font-size: 2em; /* Slightly larger */
@@ -66,7 +56,6 @@ body {
   line-height: 1; /* Ensures no extra spacing */
   margin-right: 2px; /* Adds slight spacing for better look */
 }
-
 .ScrollToTop {
   position: fixed;
   bottom: 15px;
@@ -81,7 +70,7 @@ body {
 }
 .blog-thumbnail
 {
-  border: px solid #ffb433;
+  border: 3px solid #ffb433;
 }
 
 /* 🌗 Light & Dark Mode Styles */
@@ -89,20 +78,18 @@ body {
   background-color: #ffffff;
   color: #000000;
 }
-
 .dark-mode {
-  background-color: #121212 !important;
+  background-color: #121212;
   color: #ffffff;
 }
 
 /* 🌗 Light & Dark Mode Styles */
 .light-mode {
-  background-color: #ffffff;
+  background-color: #F1E7E7;
   color: #000000;
 }
-
 .dark-mode {
-  background-color: #121212 !important;
+  background-color: #121212;
   color: #ffffff;
 }
 
@@ -111,7 +98,6 @@ body {
   color: black !important;
   text-decoration: none;
 }
-
 .dark-mode h2 a, .dark-mode h1 {
   color: white !important;
   text-decoration: none;
@@ -125,13 +111,11 @@ body {
   height: 25px;
   margin-right: 10px;
 }
-
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
-
 .slider {
   position: absolute;
   cursor: pointer;
@@ -143,7 +127,6 @@ body {
   transition: 0.4s;
   border-radius: 25px;
 }
-
 .slider::before {
   position: absolute;
   content: "";
@@ -155,11 +138,9 @@ body {
   transition: 0.4s;
   border-radius: 50%;
 }
-
 input:checked + .slider {
   background-color: #2196f3;
 }
-
 input:checked + .slider::before {
   transform: translateX(24px);
 }
